# intmax2-mining

./: README.md  package-lock.json
base-data/: 2024-11-04-depositTree.txt  2024-11-04-eligibleTree-shortTerm.txt  2024-11-11-depositTree.txt  2024-11-11-eligibleTree-shortTerm.txt  2024-11-18-depositTree.txt  2024-11-18-eligibleTree-shortTerm.txt  2024-11-25-depositTree.txt  2024-11-25-eligibleTree-shortTerm.txt  2024-12-02-depositTree.txt  2024-12-02-eligibleTree-shortTerm.txt  2024-12-09-depositTree.txt  2024-12-09-eligibleTree-shortTerm.txt  2024-12-16-depositTree.txt  2024-12-16-eligibleTree-shortTerm.txt  2024-12-23-depositTree.txt  2024-12-23-eligibleTree-shortTerm.txt  2024-12-30-depositTree.txt  2024-12-30-eligibleTree-shortTerm.txt  2025-01-06-depositTree.txt  2025-01-06-eligibleTree-shortTerm.txt  2025-01-13-depositTree.txt  2025-01-13-eligibleTree-shortTerm.txt  2025-01-20-depositTree.txt  2025-01-20-eligibleTree-shortTerm.txt  2025-01-27-depositTree.txt  2025-01-27-eligibleTree-longTerm.txt  2025-01-27-eligibleTree-shortTerm.txt  2025-02-03-depositTree.txt  2025-02-03-eligibleTree-longTerm.txt  2025-02-03-eligibleTree-shortTerm.txt  2025-02-10-depositTree.txt  2025-02-10-eligibleTree-longTerm.txt  2025-02-10-eligibleTree-shortTerm.txt  2025-02-17-depositTree.txt  2025-02-17-eligibleTree-longTerm.txt  2025-02-17-eligibleTree-shortTerm.txt  (+14 more)
claim-server/: .env  .env.example  Cargo.toml  README.md  config.toml  rust-toolchain.toml
claim-server/data/: claim_request.json
claim-server/src/: env.rs  io.rs  lib.rs  load_tree.rs  log.rs  main.rs  processor.rs
claim-server/src/app/: interface.rs  route.rs  state.rs
claim-server/src/external_api/: gnark_server.rs  mod.rs
claim-server/src/proof/: mod.rs
claim-server/src/server/: health.rs
claim-server/src/server/prover/: claim.rs
claim-v0/: .gitignore  Cargo.toml
claim-v0/src/: lib.rs  parser.rs
cli/: .gitignore  README.md  (+4 more)
mining-circuit/: Cargo.toml
mining-circuit/claim_circuit_data/: proof_with_public_inputs.json  verifier_only_circuit_data.json
mining-circuit/src/: claim_circuit.rs  eligible_tree.rs  lib.rs  simple_withraw_circuit.rs
mining-circuit/src/claim/: claim_circuit.rs  claim_inner_circuit.rs  claim_processor.rs  claim_wrapper_circuit.rs  claim_wrapper_processor.rs  inner.rs  mining_claim.rs  mod.rs
mining-circuit/v0/: Cargo.toml
mining-circuit/v0/src/: lib.rs
mining-circuit/v1/: .gitignore  Cargo.toml
mining-circuit/v1/src/: eligible_tree.rs  lib.rs
mining-circuit/v1/src/claim/: claim_inner_circuit.rs  claim_processor.rs  claim_wrapper_circuit.rs  claim_wrapper_processor.rs
mining-circuit/v1/src/withdrawal/: mod.rs  simple_withdrawal_wrapper_processor.rs  simple_withraw_circuit.rs
server/: .env.example  Cargo.toml  README.md
server/src/: main.rs  processor.rs  utils.rs
server/src/deposit_tree/: mod.rs  sync.rs
server/src/external_api/: gnark_server.rs
server/src/external_api/contract/: convert.rs  event.rs  mod.rs  utils.rs
server/src/prover/: mod.rs
(+372 files in other folders)
