[package]
name = "claim-v0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
csv = "1.3.0"
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "dev"}
ethers = "1.0"
tokio = { version = "1", features = ["full"] }
num-bigint = "0.4.6"
rand = "0.8.5"
serde_json = "1.0.128"
