[package]
name = "mining_circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
plonky2_u32={git="https://github.com/InternetMaximalism/plonky2-u32.git", branch="intmax2-dev"}
plonky2_keccak={ git="https://github.com/InternetMaximalism/plonky2_keccak"}
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "dev"}
serde_json = "1.0.122"
serde = "1.0.205"
rand = "0.8.5"
anyhow = "1.0.86"

[features]
default = ["dummy_validity_proof", "skip_insufficient_check"]
dummy_validity_proof = []
skip_insufficient_check = []

