[package]
name = "mining-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
intmax2-zkp = {git="https://github.com/InternetMaximalism/intmax2-zkp", branch="dev"}
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.20"
ethers = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.86"
dotenv = "0.15.0"
hex = "0.4.3"
rand = "0.8.5"
serde = "1.0.203"
serde_json = "1.0.117"
env_logger = "0.11.3"
num-bigint = "0.4.6"
actix-web = "4.8.0"
lazy_static = "1.5.0"
